Thu Dec 27 15:18:44 2007  Tanaka Akira  <akr@fsij.org>

	* encoding.c (rb_enc_codelen): error message refined.

Thu Dec 27 15:11:27 2007  Tanaka Akira  <akr@fsij.org>

	* encoding.c (rb_enc_check): show encodings in error message.

Thu Dec 27 15:02:52 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_casecmp): fixed using a wrong variable.
	  [ruby-list:44402]

Thu Dec 27 14:34:38 2007  Tanaka Akira  <akr@fsij.org>

	* io.c (io_fflush): checks wbuf modification by other threads.
	  not perfect.  it need locks.

Thu Dec 27 10:44:03 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/socket/socket.c: a patch to support IRIX from Andrew
	  Thompson <andrew@hijacked.us> in [ruby-core:14447].

Thu Dec 27 02:25:45 2007  NAKAMURA Usaku  <usa@ruby-lang.org>

	* lib/mkmf.rb (create_tmpsrc): retry to create file if Errno::EACCES
	  occurs. this is a workaround for mswin32.

Wed Dec 26 22:47:31 2007  NARUSE, Yui <naruse@ruby-lang.org>

	* lib/resolv.rb (Resolv::DNS::Name.==): fix for other is array of
	  Resolv::DNS::Label::Str.

	* lib/resolv.rb (Resolv::DNS::MessageEncoder#put_label): String#string
	  is not defined, so replace to_s.

	* lib/resolv.rb (Resolv::IPv6#to_name): ip6.int is obsoleted by
	  ip6.arpa.


Wed Dec 26 21:27:02 2007  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/date/format.rb (_xmlschema): some improvements.

	* lib/date/format.rb (_parse): a new hint compfunc. [experimental]

Wed Dec 26 17:31:08 2007  Tanaka Akira  <akr@fsij.org>

	* io.c (io_fflush): check closed fptr after rb_write_internal to avoid
	  SEGV on MacOS X.

Wed Dec 26 16:10:17 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (Init_String): defines chars method.

Wed Dec 26 14:38:43 2007  NAKAMURA Usaku  <usa@ruby-lang.org>

	* instruby.rb: install goruby if exists.

Wed Dec 26 13:55:02 2007  James Edward Gray II  <jeg2@ruby-lang.org>

	* lib/csv.rb:  Cleaned up some code with Ruby 1.9 idioms.

Wed Dec 26 13:29:35 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>
