@@ -1,3 +1,12 @@
+Thu Dec 27 15:25:16 2007  Tanaka Akira  <akr@fsij.org>
+
+	* encoding.c (rb_enc_codelen): show codepoint in error message.
+
+	* include/ruby/encoding.h (rb_enc_codelen): comment it returns
+	  positive integer.
+
+	* string.c (rb_str_concat): rb_enc_codelen doesn't return 0.
+
 Thu Dec 27 15:18:44 2007  Tanaka Akira  <akr@fsij.org>
 
 	* encoding.c (rb_enc_codelen): error message refined.
